# InfoManagerBot

./: .coderabbit.yaml  .gitignore  README.md  pyproject.toml
config/: policies.example.yaml  settings.example.yaml  sources.example.yaml
docs/architecture/: mvp_scope.md
docs/planning/: .markdownlint.json  codex_prompts.md  dev_log.md  umsetzungsplan_mvp.md
docs/requirements/: mvp_requirements_short.md
migrations/: 001_initial_schema.sql  002_item_status_and_published_at.sql  003_item_content_text.sql
src/infomanagerbot/: __main__.py  logging_config.py  main.py  orchestrator.py
src/infomanagerbot/adapters/: base.py  feed_common.py  registry.py  rss.py  youtube.py
src/infomanagerbot/archive/: writer.py
src/infomanagerbot/config/: loader.py  models.py
src/infomanagerbot/domain/: models.py
src/infomanagerbot/persistence/: connection.py  repositories.py  schema.py
tests/: test_archive_writer.py  test_artifact_repository.py  test_item_repository.py  test_orchestrator_discovery.py  test_rss_adapter.py  test_youtube_adapter.py
